[metadata]
name = markdown_to_html_pkg23
version = 0.2.3
author = Saarika
author_email = saarikabhasi@yahoo.com
description = A package to convert Github Markdown syntax to Html 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/markdown-to-html
project_urls =
    Bug Tracker = https://github.com/pypa/markdown-to-html/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
[options.entry_points]
console_scripts =
    md = markdown_to_html_package.md:main
python_requires = >=3.6

[options.packages.find]
where = src
