[metadata]
name = md2html_pkg
version = 0.0.0
author = Saarika
author_email = saarikabhasi@yahoo.com
description = md2html is a package to convert Github Markdown syntax to Html 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saarikabhasi/markdown-to-html
project_urls =
    Bug Tracker = https://github.com/saarikabhasi/markdown-to-html/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
[options.entry_points]
console_scripts =
    md2html = markdown2html.md2html:main
python_requires = >=3.6

[options.packages.find]
where = src
